--- a/snmpd.conf
+++ b/snmpd.conf
@@ -5,4 +5,4 @@ group MyRWGroup usm        local
 view all    included  .1                               80
 access MyRWGroup ""      any       noauth    exact  all    all    none
 syslocation Banten, Indonesia
-syscontact Root <admin_ibnu>
+syscontact Root <ibnufachrizal63@gmail.com>
