--- a/squid.conf
+++ b/squid.conf
@@ -1,37 +1,46 @@
+#Recommended minimum configuration:
 acl manager proto cache_object
-acl localhost src 127.0.0.1/32 ::1
-acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
-acl localnet src 10.0.0.0/8
-acl localnet src 172.16.0.0/12
-acl localnet src 192.168.0.0/16
-acl localnet src fc00::/7
-acl localnet src fe80::/10
+acl localhost src 127.0.0.1/32
+acl to_localhost dst 127.0.0.0/8
+acl localnet src 0.0.0.0/8 192.168.100.0/24 192.168.101.0/24
 acl SSL_ports port 443
-acl Safe_ports port 80
-acl Safe_ports port 21
-acl Safe_ports port 443
-acl Safe_ports port 70
-acl Safe_ports port 210
-acl Safe_ports port 1025-65535
-acl Safe_ports port 280
-acl Safe_ports port 488
-acl Safe_ports port 591
-acl Safe_ports port 777
+acl Safe_ports port 80  	# http
+acl Safe_ports port 21		# ftp
+acl Safe_ports port 443		# https
+acl Safe_ports port 70		# gopher
+acl Safe_ports port 210		# wais
+acl Safe_ports port 1025-65535	# unregistered ports
+acl Safe_ports port 280		# http-mgmt
+acl Safe_ports port 488		# gss-http
+acl Safe_ports port 591		# filemaker
+acl Safe_ports port 777		# multiling http
+
 acl CONNECT method CONNECT
-acl SSH dst
-http_access allow SSH
+
 http_access allow manager localhost
 http_access deny manager
-http_access allow localnet
-http_access allow localhost
-http_access deny all
-http_port 8080
-http_port 8000
+http_access deny !Safe_ports
+
+http_access deny to_localhost
+icp_access deny all
+htcp_access deny all
+
 http_port 3128
+http_port 8080
 hierarchy_stoplist cgi-bin ?
-coredump_dir /var/spool/squid
+access_log /var/log/squid3/access.log squid
+
+
+#Suggested default:
 refresh_pattern ^ftp:		1440	20%	10080
 refresh_pattern ^gopher:	1440	0%	1440
-refresh_pattern -i (/cgi-bin/|\?) 0	0%	0
+refresh_pattern -i (/cgi-bin/|\?) 0 0% 0
 refresh_pattern .		0	20%	4320
-visible_hostname proxy.rasta-team.net
+# Leave coredumps in the first cache dir
+coredump_dir /var/spool/squid3
+
+# Allow all machines to all sites
+http_access deny all
+visible_hostname Rasta-Team.net
+cache_effective_user proxy
+cache_effective_group proxy
